# audio-intel

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: run.ps1  run.sh  setup.ps1  setup.sh
src/: __init__.py  config.py  env_file.py  hf_pretrained.py  stats.py  types.py
src/align/: __init__.py  ctc.py
src/audio/: __init__.py  chunking.py  decode.py  vad_bridge.py  workspace.py
src/common/: __init__.py  model_pool.py
src/diarization/: __init__.py  chunks.py  embeddings.py  merge.py  pyannote.py
src/events/: __init__.py  panns.py
src/quality/: __init__.py  normalization.py
src/server/: __init__.py  __main__.py  app.py  transcription.py
src/transcribe/: __init__.py  alignment.py  engine.py  segments.py  service.py
src/vad/: __init__.py  pipeline.py  regions.py  silero.py  streaming.py
tests/: test_aed_parallel.py  test_alignment_bridge.py  test_audio_events.py  test_chunking.py  test_concurrent_requests.py  test_config.py  test_diarization_chunks.py  test_diarization_parallel.py  test_eager_loading.py  test_env_file.py  test_hf_pretrained.py  test_request_features.py  test_speaker_merge.py  test_text_normalization.py  test_transcriber_merge.py  test_vad_bridge.py  test_vad_streaming.py  test_workspace.py
