[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-intel"
version = "1.0.0"
description = "Audio intelligence: Whisper transcription, CTC alignment, diarization, and sound-event detection"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "faster-whisper>=1.2.0",
    # cuDNN 9 (CUDA 12.6 runtime image / torch 2.5+); 4.4.x looks for libcudnn_ops_infer.so.8.
    "ctranslate2>=4.5.0,<5",
    "numpy>=1.24",
    "soundfile>=0.12",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "python-multipart>=0.0.20",
    "torchlibrosa>=0.1.0",
    "librosa>=0.10",
    "panns-inference>=0.1.1",
    "huggingface-hub>=0.20.3,<1.0.0",
    "pyannote.audio==3.3.2",
]
align = ["whisperx>=3.3.0"]
vad = ["silero-vad>=5.1"]
all = ["audio-intel[server,align,vad]"]
dev = ["pytest>=8.0", "ruff>=0.4", "pre-commit>=4.0"]

[project.scripts]
audio-intel = "audio_intel.server.__main__:main"

[tool.setuptools.package-dir]
"audio_intel" = "src"

[tool.setuptools]
packages = [
    "audio_intel",
    "audio_intel.align",
    "audio_intel.audio",
    "audio_intel.common",
    "audio_intel.diarization",
    "audio_intel.events",
    "audio_intel.quality",
    "audio_intel.server",
    "audio_intel.transcribe",
    "audio_intel.vad",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.mdformat]
wrap = 100
